--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="es-MX">
 
 <head>
     <meta charset="utf-8">
@@ -42,8 +42,8 @@
                                 <div class="row">
                                     <div class="col-12">
                                         <div class="info-current-song">
-                                            <h2 id="currentSong" class="current-song text-uppercase">...</h2>
-                                            <h3 id="currentArtist" class="current-artist text-captalize">...</h3>
+                                            <h2 id="currentSong" class="current-song text-uppercase">DJ Sets</h2>
+                                            <h3 id="currentArtist" class="current-artist text-captalize">Electro</h3>
                                         </div>
                                     </div>
                                     <div class="col-12">
@@ -60,7 +60,6 @@
                                                 </div>
                                             </div>
                                             <div class="col-12 text-center call-lyrics">
-                                                <a href="#" class="lyrics" style="" data-target="#modalLyrics">Lyrics</a>
                                             </div>
                                         </div>
                                     </div>
@@ -71,20 +70,32 @@
                 </div>
                 <div class="row historic">
                     <div class="col-12">
-                        <h2>Recently Played</h2>
+                        <h2>Dir</h2>
                         <div class="row" id="historicSong">
                             <article class="col-12 col-md-6">
                                 <div class="cover-historic"></div>
                                 <div class="music-info">
-                                    <div class="song">...</div>
-                                    <div class="artist">...</div>
+                                    <div class="song"><a href="#">Best of 2k</a></div>
                                 </div>
                             </article>
                             <article class="col-12 col-md-6">
                                 <div class="cover-historic"></div>
                                 <div class="music-info">
-                                    <div class="song">...</div>
-                                    <div class="artist">...</div>
+                                    <div class="song">DJ Sets</div>
+                                    <div class="artist"></div>
+                                </div>
+                            </article>
+                            <article class="col-12 col-md-6">
+                                <div class="cover-historic"></div>
+                                <div class="music-info">
+                                    <div class="song">2K Hitz</div>
+                                </div>
+                            </article>
+                            <article class="col-12 col-md-6">
+                                <div class="cover-historic"></div>
+                                <div class="music-info">
+                                    <div class="song">Noize Nación</div>
+                                    <div class="artist"></div>
                                 </div>
                             </article>
                         </div>
